# marmot

./: CMakeLists.txt  Cargo.toml  build.rs  build_granular_gate.py  granular_gate.capnp  main1.rs  process-compose.yaml
internal/plugin/providers/asyncapi/: kafka.go
src/: granular_gate.capnp  granular_gate.capnp.c++  granular_gate.capnp.h  main.cpp  main.rs  particle_filter.cpp  particle_filter.h  resonator.cpp  resonator.cu  resonator.h  shm_writer.cpp  shm_writer.h
